# sam2galaxy-gnn

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
configs/: ensemble_full_48_eval.yaml  release_manifest.json
data/halo_hdf5/: README.md
examples/: README.md
examples/input/graph_input/: graph.pt  graph_summary.json
examples/input/tree_input/: target_indicator.csv  tree_ids.txt
examples/output/: ensemble_summary.json  single_summary.json
examples/output/ensemble/: sam_0012_predictions.csv  sam_0018_predictions.csv  sam_0049_predictions.csv  sam_0218_predictions.csv  sam_0269_predictions.csv  sam_0307_predictions.csv  sam_0350_predictions.csv  sam_0512_predictions.csv
examples/output/single/: sam_0012_predictions.csv  sam_0018_predictions.csv  sam_0049_predictions.csv  sam_0218_predictions.csv  sam_0269_predictions.csv  sam_0307_predictions.csv  sam_0350_predictions.csv  sam_0512_predictions.csv
models/ensemble/: full_48_ckpts.txt
scalers/: ensemble_train_6480_scalers.pt
scripts/: generate_example_eval_outputs.py  prepare_example_graph.py  run_inference.py  validate_release.py
src/sam2galaxy_gnn/: __init__.py  artifacts.py  cli.py  config.py  example_eval.py  export.py  graph_builder.py  pipeline.py  predict_ensemble.py  predict_single.py  runtime.py
src/sam2galaxy_gnn/_vendor/: model_sam_gnn.py
tests/: test_release_layout.py
