[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2galaxy-gnn"
version = "0.1.2"
description = "Public release scaffold for SAM2Galaxy GNN inference."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "SAM2Galaxy" }
]
dependencies = [
  "PyYAML>=6.0",
  "h5py>=3.10",
  "numpy>=1.26",
  "torch>=2.0",
  "torch-geometric>=2.5",
]

[project.scripts]
sam2galaxy-gnn = "sam2galaxy_gnn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
